--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>Hello</p>
-    <script src="main.js"></script>
+    <script src="fun.js"></script>
 </body>
-</html>
+</html> 
